feat: update review, company, add skill, fix error